syntax = "proto3";

service CorporationService {
    rpc Exists (ExistsGetRefreshRequest) returns (ExistsResponse);
    rpc Get (ExistsGetRefreshRequest) returns (CorporationResponse);
    rpc getNotUpdated(GetNotUpdatedRequest) returns (GetNotUpdatedResponse);
    rpc refresh(ExistsGetRefreshRequest) returns (CorporationResponse);
}

message ExistsResponse {
    bool exists = 1;
}

message ExistsGetRefreshRequest {
    int32 corporationId = 1;
}

message CorporationResponse {
    int32 id = 1;
    string handle = 2;
    string name = 3;
    string ticker = 4;
    string description = 5;
    int32 ceoId = 6;
    int32 creatorId = 7;
    int32 allianceId = 8;
    int32 executingAllianceId = 9;
    float taxRate = 10;
    CorporationIconResponse icon = 11;
}

message CorporationIconResponse {
    string px64x64 = 1;
    string px128x128 = 2;
    string px256x256 = 3;
}

message GetNotUpdatedRequest {
    string interval = 1; // interval is PostgreSQL interval value
    int32 limit = 2;
}

message GetNotUpdatedResponse {
    repeated CorporationResponse corporations = 1;
}
